--- a/index.html
+++ b/index.html
@@ -8,6 +8,37 @@
     <title>Exact Age Calculator</title>
   </head>
   <body>
+    <main class="container">
+      <div class="container-calculator">
+        <h1>Exact Age Calculator</h1>
+        <div class="date">
+          <div class="dates years">
+            <div class="dates-years-num">29</div>
+            <div class="dates-lettering">years</div>
+          </div>
+          <div class="dates months">
+            <div class="dates-months-num">01</div>
+            <div class="dates-lettering">months</div>
+          </div>
+          <div class="dates days">
+            <div class="dates-days-num">29</div>
+            <div class="dates-lettering">days</div>
+          </div>
+          <div class="dates hours">
+            <div class="dates-hours-num">29</div>
+            <div class="dates-lettering">hours</div>
+          </div>
+          <div class="dates minutes">
+            <div class="dates-minutes-num">29</div>
+            <div class="dates-lettering">minutes</div>
+          </div>
+          <div class="dates seconds">
+            <div class="dates-seconds-num">29</div>
+            <div class="dates-lettering">seconds</div>
+          </div>
+        </div>
+      </div>
+    </main>
     <script src="App.js"></script>
   </body>
 </html>
