--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <body>
     <main class="container">
       <div class="container-calculator">
+        <div class="joke">
+          <img src="./asa.png" alt="joke" />
+        </div>
         <h1>Exact Age Calculator</h1>
         <div class="date">
           <div class="dates years">
