Last commit Photo added

--- a/index.html
+++ b/index.html
@@ -10,33 +10,33 @@
   <body>
     <main class="container">
       <div class="container-calculator">
-        <div class="joke">
-          <img src="./asa.png" alt="joke" />
+        <div class="none">
+          <img class="joke" src="./asa.png" alt="joke" />
         </div>
         <h1>Exact Age Calculator</h1>
         <div class="date">
           <div class="dates years">
-            <div class="dates-num dates-years-num">29</div>
+            <div class="dates-num dates-years-num">99</div>
             <div class="dates-lettering">years</div>
           </div>
           <div class="dates months">
-            <div class="dates-num dates-months-num">01</div>
+            <div class="dates-num dates-months-num">99</div>
             <div class="dates-lettering">months</div>
           </div>
           <div class="dates days">
-            <div class="dates-num dates-days-num">29</div>
+            <div class="dates-num dates-days-num">99</div>
             <div class="dates-lettering">days</div>
           </div>
           <div class="dates hours">
-            <div class="dates-num dates-hours-num">29</div>
+            <div class="dates-num dates-hours-num">99</div>
             <div class="dates-lettering">hours</div>
           </div>
           <div class="dates minutes">
-            <div class="dates-num dates-minutes-num">29</div>
+            <div class="dates-num dates-minutes-num">99</div>
             <div class="dates-lettering">minutes</div>
           </div>
           <div class="dates seconds">
-            <div class="dates-num dates-seconds-num">29</div>
+            <div class="dates-num dates-seconds-num">99</div>
             <div class="dates-lettering">seconds</div>
           </div>
         </div>
